# Fraud-Detection-System

./: .gitignore  README.md  make_submission.py  pyproject.toml  requirements.txt
.dvc/: config
data/raw/: sample_submission.csv.dvc
src/: __init__.py
src/data/: __init__.py  categorical_encoding.py  temporal_splitting.py  validation.py
src/evaluation/: __init__.py  adversarial_validation.py  calibration.py  metrics.py  model_comparison.py  monitoring.py
src/features/: __init__.py  feature_engineering.py  feature_selection.py  temporal_features.py
src/models/: __init__.py  baseline_models.py  lightgbm_model.py
src/pipeline/: __init__.py  feature_store.py  ieee_cis_pipeline.py  tiered_pipeline.py
src/rules/: __init__.py  rules_engine.py
