[project]
name = "fraud-detection"
version = "1.0.0"
description = "Tiered fraud detection system for IEEE-CIS dataset"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.1.0",
    "lightgbm>=3.3.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.setuptools]
packages = ["src"]
